--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@civic/auth": "^0.5.2",
     "@civic/auth-web3": "^0.5.5",
     "@hookform/resolvers": "^3.9.1",
+    "@solana/actions": "^1.6.4",
+    "@solana/spl-token": "^0.4.8",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
