--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@civic/auth": "^0.5.2",
     "@civic/auth-web3": "^0.5.5",
+    "@coral-xyz/anchor": "0.30.1",
     "@hookform/resolvers": "^3.9.1",
     "@solana/actions": "^1.6.4",
     "@solana/spl-token": "^0.4.8",
