--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
+    "ts-mocha": "^10.0.0",
     "typescript": "^5"
   }
 }
